# python-vs-rust-DL-inference

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Justfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
data/: model.onnx  model.pt  model.safetensors
pics/: architecture.drawio
python-api-server/: README.md  pyproject.toml
python-api-server/migration/: env.py
python-api-server/migration/versions/: c4b68bd128c4_initial_migration.py
python-api-server/scripts/: dump_feature_1.py  dump_feature_2.py  sanity_check.py  utils.py
python-api-server/src/api/rest/: bootstrap.py  config.py  main.py
python-api-server/src/api/rest/dtos/: __init__.py  feature.py
python-api-server/src/api/rest/routers/: feature.py
python-api-server/src/services/: config.py  feature_service.py  model_service.py
python-api-server/src/services/adapters/: feature.py
python-api-server/src/services/types/: entities.py
python-load-tester/: README.md  main.py  pyproject.toml
rust-api-server/: Cargo.toml  README.md
rust-api-server/src/: api.rs  config.rs  lib.rs  main.rs  services.rs
rust-api-server/src/api/: apiserver.rs  dtos.rs
rust-api-server/src/api/routers/: feature.rs
rust-api-server/src/services/: adapters.rs  feature_service.rs  model_service.rs  model_service_v2.rs  types.rs
